tests/fixtures/invalid/unclosed_multiline.pi
# Error: Bloque multilínea sin cerrar
task broken
   sql """
       SELECT * FROM users
       WHERE id = 1
